clean up codebase, copy correct clicked word to user's clipboard

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spell Checker - Custom Implementation</title>
+    <title>Spell Checker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>📝 Spell Checker</h1>
-            <p>Custom spell checker implementation (replacing macOS native)</p>
+            <p>Check the spelling of individual words</p>
         </header>
 
         <main>
@@ -30,9 +30,6 @@
                     <button id="pasteBtn" class="btn-secondary">
                         📋 Paste from Clipboard
                     </button>
-                    <button id="demoBtn" class="btn-secondary">
-                        🧪 Demo API
-                    </button>
                 </div>
             </div>
 
@@ -43,10 +40,9 @@
             <div class="instructions">
                 <h3>Features:</h3>
                 <ul>
-                    <li>✅ Custom spell checker (no longer using macOS native)</li>
-                    <li>✅ Programmatic API similar to electron-spellchecker</li>
+                    <li>✅ Custom spell checking</li>
                     <li>✅ Word correction suggestions</li>
-                    <li>✅ Console logging for debugging</li>
+                    <li>✅ Clipboard integration</li>
                     <li>✅ Cross-platform compatibility</li>
                 </ul>
                 
@@ -55,7 +51,6 @@
                     <li>Type a single word in the input field</li>
                     <li>Click "Check" or press Enter</li>
                     <li>Or paste a word from your clipboard</li>
-                    <li>Click "Demo API" to see programmatic checking</li>
                 </ul>
             </div>
         </main>
