add box shake on invalid char input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <input 
                         type="text" 
                         id="wordInput" 
-                        placeholder="Type a word..."
+                        placeholder="Type here..."
                         autocomplete="off"
                         spellcheck="false"
                     >
