bugfix: allow hotkeys with option key to register as normal keys

--- a/settings.html
+++ b/settings.html
@@ -51,7 +51,7 @@
                         placeholder="Press your desired key combination..."
                         readonly
                     >
-                    <p class="recording-hint">Press and hold your desired key combination</p>
+                    <p class="recording-hint">Press and hold your desired key combination. Include at least one modifier key (⌘, ⌃, ⌥, or ⇧).</p>
                 </div>
             </div>
             <div class="modal-footer">
