add sound toggle; add more to-dos

--- a/settings.html
+++ b/settings.html
@@ -26,6 +26,19 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="setting-row">
+                    <div class="setting-label">
+                        <label>Sound Effects</label>
+                        <p class="setting-description">Enable audio feedback for all interactions</p>
+                    </div>
+                    <div class="setting-control">
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="soundToggle" checked>
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                </div>
             </div>
         </main>
         
