audio playback still not working, disable for now

--- a/settings.html
+++ b/settings.html
@@ -30,11 +30,11 @@
                 <div class="setting-row">
                     <div class="setting-label">
                         <label>Sound Effects</label>
-                        <p class="setting-description">Enable audio feedback for all interactions</p>
+                        <p class="setting-description">Audio feedback for interactions (currently disabled due to technical issues in built app)</p>
                     </div>
                     <div class="setting-control">
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="soundToggle" checked>
+                        <label class="toggle-switch disabled">
+                            <input type="checkbox" id="soundToggle" disabled>
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
@@ -44,7 +44,7 @@
         
         <footer class="settings-footer">
             <div class="app-info">
-                <span class="app-version">Spell Checker 1.0.0</span>
+                <span class="app-version">Spell Checker 1.1.2</span>
             </div>
         </footer>
     </div>
