fix in-app sound; update json package versioning and bundle ID

--- a/settings.html
+++ b/settings.html
@@ -30,11 +30,11 @@
                 <div class="setting-row">
                     <div class="setting-label">
                         <label>Sound Effects</label>
-                        <p class="setting-description">Audio feedback for interactions (currently disabled due to technical issues in built app)</p>
+                        <p class="setting-description">Audio feedback for interactions</p>
                     </div>
                     <div class="setting-control">
-                        <label class="toggle-switch disabled">
-                            <input type="checkbox" id="soundToggle" disabled>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="soundToggle">
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
